update main branch to java 17